--- a/login/src/main/res/values/strings.xml
+++ b/login/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">login</string>
-    <string name="start">电路学习hhh</string>
+    <string name="start">电路学习</string>
 
 </resources>
